--- a/cauculadora-simples.html
+++ b/cauculadora-simples.html
@@ -17,8 +17,8 @@
        <div class="btn">  
         <button onclick="desliga()">ON</button>
         <button onclick="zerar()">C</button>
-        <button onclick="operacao('porc')">%</button>
-        <button onclick="operacao('raiz')">&radic;</button>
+        <button onclick="porcentagem()">%</button>
+        <button onclick="raiz_quadrada()">&radic;</button>
 
 
         <button onclick="digitando('7')">7</button>
@@ -39,6 +39,6 @@
         <button id="igual" onclick="calcular()">=</button>
        </div>
     </section>
-    
+    <script>desliga();</script>
 </body>
 </html>
